# dikology.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  astro.config.mjs  eslint.config.js  makefile  package-lock.json  package.json  pre-commit.example  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: changelog-check.yml  daily.yml  deploy.yml  generate-anki.yml  generate-deck.yml
components/: Navbar.js
components/Books/: Books.js  BooksStyles.js
constants/: constants.js
content/changelog/: example.md
output/: anki_deck.apkg
pages/: index.js
projects/: topic_modeling.py
public/: graph.json
public/decks/: analytics.apkg  data-deck.apkg  prettify-data-deck.apkg  prettify-data.apkg  prettify-sailing-deck.apkg  prettify-sailing.apkg  sailing-deck.apkg
src/: env.d.ts
src/components/: Card.astro  Charts.jsx  Footer.astro  Gallery.astro  GalleryItem.astro  Modal.astro  Navigation.astro  PostHeader.astro  Sidebar.astro  YoutubeCard.astro
src/data/: results.json
src/js/: utils.js
src/layouts/: BaseLayout.astro  Layout.astro  LongLayout.astro  MarkdownPostLayout.astro  NotebookLayout.astro
src/pages/: 404.astro  [title].astro  about.astro  anki-card-mockup.astro  blog.astro  changelog.astro  data.astro  dayone.astro  gallery-2.astro  gallery-details.astro  gallery.astro  index.astro  sailboating.astro  yndx.astro
src/styles/: global.css
utils/: curation_tool.py  diff_prompt.txt  fetch_files.py  generate_anki.py  generate_calendar.py  generate_charts.py  generate_diff_prompt.sh  list_yandex_files.py  prepare_data.py
(+237 files in other folders)
