[tool.poetry]
name = "dikology-github-io"
version = "0.1.0"
description = ""
authors = ["dikology <dgimaletdinov@gmail.com>"]
readme = "README.md"
packages = [{include = "dikology"}]

[tool.poetry.dependencies]
python = "^3.10"
genanki = "^0.13.1"
nbconvert = "^7.16.6"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
